AC_PREREQ(2.53)
AC_INIT()
AC_CONFIG_HEADER(ComponentIDL/HU_Container.h)
AH_BOTTOM([
#ifndef __CAT2_FF 
#if __GNUC__ +0 > 2
#define __CAT2_FF(x,y) <x##y>
#else
#define __CAT2_FF(x,y) <##x##y##> 
#endif 
#endif 

#ifndef __CAT2_F 
#define __CAT2_F(x,y) __CAT2_FF(x,y) 
#endif 
#define CORBA_STUB_HEADER(x) __CAT2_F(x,IDL_CLN_H_SUFFIX) 
#define CORBA_SKELETON_HEADER(x) __CAT2_F(x,IDL_SRV_H_SUFFIX)
])

VERSION=0.0.2
AC_SUBST(VERSION)
PACKAGE=CCM_container
AC_SUBST(PACKAGE)
dnl AM_INIT_AUTOMAKE(CCM_container,0.0.2)

AC_PROG_INSTALL
CXXFLAGS=
AC_PROG_CXX
AC_PROG_RANLIB

AC_SET_MAKE

RSSH_PROG_CXXAR
RSSH_PROG_CXXLD
RSSH_PIC_FLAG

project_root=`pwd`
AC_SUBST(project_root,$project_root)

system_name=`uname`
AC_SUBST(system_name,$system_name)

RSSH_GCC_STDCPLUSPLUS

RSSH_CHECK_ORB

case $ORB in
	ORBacus)
		ORB_IDL=orb.idl
		POA_IDL=PortableServer.idl
		;;
	MICO)
		ORB_IDL="mico/orb.idl"
		POA_IDL="mico/poa.idl"
		;;
		*)
		ORB_IDL=orb.idl
		POA_IDL=PortableServer.idl
		;;
esac

AC_SUBST(ORB_IDL,$ORB_IDL)
AC_SUBST(POA_IDL,$POA_IDL)

AC_PATH_PROG(IDL2IDL,idl2idl)

AC_SUBST(IDL2IDL)

AC_OUTPUT([
Makefile
ComponentIDL/Makefile
ComponentIDL/gen_CORBADepends.idl
ComponentContainer/Makefile
ComponentServer/Makefile
ComponentServerActivator/Makefile
ComponentInstaller/Makefile
])
